--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.8",
+    "@types/react-native": "^0.64.10",
+    "@types/react-native-vector-icons": "^6.4.7",
     "expo": "~42.0.0",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
@@ -18,10 +25,14 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-unimodules": "~0.14.3",
-    "react-native-web": "~0.13.12"
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.3.5"
   },
   "private": true
 }
